[package]
name = "pm5"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio =  { version = "1.41", features = ["full"] }
uuid = { version = "1.18.0", features = ["v7"]}
opendal = { version = "0.53", features = ["services-fs"] }
anyhow = "1.0"
byteorder = "1.5"
thiserror = "2.0"
num_enum = "0.7"
polars = { version = "0.52.0", features = ["lazy", "rolling_window_by", "rolling_window", "strings", "concat_str", "timezones", "parquet", "cloud"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
serde_json = "1.0.145"
